test/spec_vectors/conversions/fail/module_4.wat
(module (func (result i32) (i32.trunc_f64_s (i64.const 0))))